<resources>
    <string name="app_name">GAZT</string>
    <string name="Login">Login</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Mobile</string>
    <string name="email">Email</string>
    <string name="Settings">Settings</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="Validate">Validate</string>
    <string name="title_activity_home">HOME</string>
    <string name="title_home">Home</string>
    <string name="title_contactus">Contact Us</string>
    <string name="title_profile">Profile</string>
    <string name="Notifications"> Notifications</string>
    <string name="not1">You have payable Zakat returns</string>
    <string name="not2">You have late VAT returns that have not been submitted</string>
    <string name="not3">A fine was issued to delay registration</string>
    <string name="totalOfUnpaidBills">Total of unpaid Bills:</string>
    <string name="RS">RS</string>
    <string name="PaidRS">SAR 4,000 has been paid during the current fiscal year</string>
    <string name="MyBills">My Bills</string>
    <string name="MyCertificates">My Certificates</string>
    <string name="ApprovalOfZakat">Approval of Zakat</string>
    <string name="editProfile">Edit Profile</string>
    <string name="Save"> Save</string>
    <string name="send"> Send</string>
    <string name="comment"> Comment</string>
    <string name="file"> Upload file</string>
    <string name="zakahType">Type of Zakah:</string>
    <string name="estimatedZakah">Estimated Zakah</string>
    <string name="postpaidNumber">Postpaid Number:</string>
    <string name="dueAmount">Due Amount:</string>
    <string name="dueDate">Due Date:</string>
    <string name="paid">Paid</string>
    <string name="all">All</string>
    <string name="partiallypaid">Part Paid</string>
    <string name="Unpaid">Unpaid</string>
    <string name="cert1">VAT registration certificate</string>
    <string name="cert2">Certificate of Registration</string>
    <string name="summaryOfZakat">summary of Zakat </string>
    <string name="salesDeatils"> Sales Details</string>
    <string name="bill"> Bill</string>
    <string name="lateRepr">Late Representations</string>
    <string name="earlyRepr">Early Representations</string>
    <string name="Gender">Gender</string>
    <string name="consumeWebService">consume Web Service</string>
    <string name="scanQRcode">Scan QR Code</string>
    <string name="maps">Map</string>
    <string name="camera">Use Camera</string>
    <string name="multiple">Multiple</string>
    <string name="role">your role </string>
    <string name="admin">Admin </string>
    <string name="user">User </string>
    <string name="target_language">Target Language</string>
    <string name="visitor">Visitor</string>
    <string name="assistant_api">LACTacomY9pFStqMv2EnjgDk-h1JqZVHEixnE79jEngM</string>
    <string name="assistant_pass">LACTacomY9pFStqMv2EnjgDk-h1JqZVHEixnE79jEngM-68642657-1cb1-446b-a9e6-1aa4ad897bfc</string>

    <string name="assistant_url">https://api.eu-gb.assistant.watson.cloud.ibm.com/instances/8bc94a83-0952-4ad4-82af-1601150de803</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
