<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZakahPages.UsingCamera">

    <!-- add UsingCamera Button to open the UsingCamera-->

    <!-- add ImageView to display the captured image-->

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="42dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/click_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/camera_button"
            android:layout_width="111dp"
            android:layout_height="65dp"
            android:background="@drawable/btn"
            android:text="@string/camera"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/pic_upload"
            android:layout_width="111dp"
            android:layout_height="65dp"
            android:background="@drawable/btn"
            android:text="@string/file"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/multiple"
            android:layout_width="111dp"
            android:layout_height="65dp"
            android:background="@drawable/btn"
            android:text="@string/multiple"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/click_image"
        android:layout_width="379dp"
        android:layout_height="468dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:id="@+id/uris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
